Fixed media selector max-width so that it only triggers on small screens

--- a/css/basestyle.css
+++ b/css/basestyle.css
@@ -42,7 +42,7 @@ header > * {
     margin-bottom: 0px;
 }
 
-@media (max-width: 12450px) {
+@media (max-width: 800px) {
     .titleborder {
         display: none;
     }
